--- a/src/Variables.css
+++ b/src/Variables.css
@@ -2,8 +2,8 @@
     --main-bg-color: rgba(24, 0, 97, 0.448);
     --sec-bg-color: #100d0d92;
     --btn-color: #68655f;
-    --hover-color: rgb(146, 142, 135)5f;
+    --hover-color: #d4ff00b3;
     --primary-color: #fbbe44;
     --secondary-color: #4efe4ea7;
-    --border-color: #00000081;    
+    --border-color: #0000009f;    
   }
