--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
   background-image: url("./Stuff/Pics/background.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-size: 100%;
 }
 
 code {
