--- a/src/App.module.css
+++ b/src/App.module.css
@@ -5,7 +5,7 @@
 
 
 .Appheader {
-  background-color: #282c34; 
+  /* background-color: #282c34;  */
   min-height: 100%;
   width: 100%;
   display: flex;
