--- a/src/Home/Home.module.css
+++ b/src/Home/Home.module.css
@@ -1,7 +1,7 @@
 
 
 .Appheader {
-    background-color: #282c34; 
+    /* background-color: #282c34;  */
     min-height: 100%;
     width: 100%;
     display: flex;
@@ -19,7 +19,7 @@
     align-items: center;
     height: 48vw;
     width: 50%;
-    background-color: #fb617d;
+    /* background-color: #fb617d; */
   }
   
   .spacerContainer {
